removed h4 code and fixed spacing

--- a/float-grid.css
+++ b/float-grid.css
@@ -3,6 +3,7 @@ html{
 	margin-left: 12px;
 	margin-right: 12px;
 }
+
 *{
 	box-sizing: border-box;
 
@@ -39,38 +40,40 @@ html{
 	.source-header{
   		margin-top: 12px;
 	}
-	.thumbnail{
-		width: 70%;
-	}
 	
 	
 	.searchContainer{
 		width: 200px;
 	}
+
 	.col-2{
 		float: left;
 		width: 49%;
 		margin-left: 0.5%;
 		margin-right: 0.5%;
 	}
+
 	.col-3{
 		width: 100%;
 		overflow-x: scroll;
 	}
+
 	.col-4{
 		float: left;
 		width: 100%;
 		height: 300px;
 	}
+
 	.col-6{
 		margin-top: 12px;
 		width: 100%;
-		
 	}
+
 	#BESTBUYpopUpWindow{
 		width: 80%;
 		height: 80%;
 	}
+
 	.searchButton{
 		margin: 24px 0px 24px 0px;
 	}
@@ -78,64 +81,65 @@ html{
 }
 
 @media only screen and (min-width:540px){
-	li{
-		font-size: 18px;
-	}
 	.productName{
 		font-size: 14px;
 	}
+
 	.quickSearchParent{
 		display: flex;
 	}
+
 	.searchContainer{
 		width: 480px;
 	}
-	#quickSearch2{
-		display: block;
-	}
+
 	.source-header{
   		margin-top: 30px;
 	}
-	.thumbnail{
-		width: 45%;
-	}
+
 	.responsive-searchBar{
 		float: left;
 		width: 100%;
 	}
+
 	.col-2{
 		float: left;
 		width: 32.3%;
 		margin-left: 0.5%;
 		margin-right: 0.5%;
 	}
+
 	.col-3{
 		float: left;
 		width: 49%;
 		margin-left: 0.5%;
 		margin-right: 0.5%;
 	}
+
 	.col-4{
 		float: left;
 		width: 31%;
 		margin-left: 1%;
 		margin-right: 1%;
 	}
+
 	.col-6{
 	display: inline-block;
 	margin-top: 35px;
 	float: left;
 	width: 50%;
 	}
-.searchButton{
-	margin: 0;
-	}
-.BESTBUYImage{
-  height: 150px;
-    align-items:center;
-  }
 
-	.productDescription p, .etsyDescription p, .youtubeVideoDescription p{
+	.searchButton{
+		margin: 0;
+	}
+
+	.BESTBUYImage{
+	  	height: 150px;
+		align-items:center;
+ 	}
+
+	.productDescription p{
   		white-space: normal;
   		max-height: 42px;
 	}
@@ -143,12 +147,6 @@ html{
 		width: 24%;
 	}
 
-	.youtubeVideoImage img{
-		width: 35%
-	}
-	.etsyImage img{
-		width: 25%;
-	}
 	#BESTBUYpopUpWindow{
 		width: 80%;
 		height: 95%;
@@ -157,77 +155,59 @@ html{
 }
 
 @media only screen and (min-width:768px){
-	li{
-		font-size: 20px;
-	}
-	h4{
-		display: block;
-		text-align: center;
-	}
 	.searchContainer{
 		width: 640px;
 	}
+
 	.responsive-searchBar{
 		float: left;
 		width: 50%;
 	}
+
 	.BESTBUYImage{
-  height: 200px;
-    align-items:center;
-  }
-	.searchGif img{
-		display: block;
-		margin: auto;
+  		height: 200px;
+    	align-items:center;
 	}
+
 	.quickSearchParent{
 		display: flex;
 	}
+
 	.source-header{
   		margin-top: 30px;
 	}
-	.thumbnail{
-		width: 45%;
-	}
+
 	.col-2{
 		float: left;
 		width: 15%;
 		margin-left: .833%;
 		margin-right: .833%;
 	}
+
 	.col-3{
 		float: left;
 		width: 32.3%;
 		margin-left: 0.5%;
 		margin-right: 0.5%;
 	}
+
 	#BESTBUYpopUpWindow{
 		width: 60%;
 		height: 50%;
 	}
+
 	.col-4{
 		float: left;
 		width: 24%;
 		margin-left: .5%;
 		margin-right: .5%;
-
 	}
 
-	.thumbnail{
-		width: 55%;
-	}
-	.etsyImage img{
-		width: 35%;
-	}
 }
 
 @media only screen and (min-width:1024px){
-
 	.searchContainer{
 		width: 840px;
-	}
-	h4{
-		display: block;
-		text-align: center;
 	}
 
 	.source-header{
@@ -245,10 +225,6 @@ html{
 		width: 24%;
 		margin-left: .5%;
 		margin-right: .5%;
-
-	}
-	.thumbnail{
-		width: 60%;
 	}
 	
 
